# trickery

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
.github/workflows/: publish.yaml
docs/: image-generation.md  images.md  index.md  input-images.md
prompts/: catalog_images.md  dad_jokes.md  describe_image.md  edit_image.md  generate_diagram.md  generate_icon.md  highlight_humans.md  make_realistic.md  review_ui.md  trickery_readme.md
specs/: coding-agent-design.md  llm-provider.md  text-input.md
src/: error.rs  main.rs  output.rs
src/commands/: agent.rs  generate.rs  image.rs  mod.rs
src/provider/: mod.rs  openai.rs
src/tools/: current_time.rs  mod.rs
src/trickery/: generate.rs  image.rs  loop.rs  mod.rs
test_cases/: basic_generation.md  code_review.md  error_handling.md  image_comparison.md  image_description.md  image_generate.md  image_multimodal.md  image_ocr.md  json_output.md  simple.md  template_variables.md  text_input.md  tool_calls.md  variables.md
