[package]
name = "trickery"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "^4.5.43", features = ["derive"] }
serde_json = "^1.0.132"
llm-chain = "0.13.0"
llm-chain-openai = "0.13.0"
serde = { version = "^1.0.215", features = ["derive"] }
tokio = { version = "^1.47.1", features = ["macros", "rt-multi-thread", "fs"] }
clap_complete = "^4.5.55"

