[package]
name = "trickery"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
description = "CLI tool for generating textual artifacts using LLM"
authors = ["Mykhailo Chalyi"]
license-file = "LICENSE"
repository = "https://github.com/chaliy/trickery"
readme = "README.md"
keywords = ["cli", "llm", "openai", "template", "codegen"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "^4.5.43", features = ["derive"] }
serde_json = "^1.0.132"
serde = { version = "^1.0.215", features = ["derive"] }
tokio = { version = "^1.47.1", features = ["macros", "rt-multi-thread", "fs"] }
clap_complete = "^4.5.55"
reqwest = { version = "^0.12", features = ["json"] }
thiserror = "^2.0"
base64 = "^0.22"
rand = "^0.9"

[dev-dependencies]
mockito = "^1.6"
tempfile = "^3.15"

